@@ -12,6 +12,7 @@ import com.fincity.saas.entity.processor.enums.LeadSubSource;
 import com.fincity.saas.entity.processor.model.LeadDetails;
 import com.fincity.saas.entity.processor.enums.MetaLeadFieldType;
 import com.fincity.nocode.reactor.util.FlatMapUtil;
+import com.fincity.saas.commons.util.StringUtil;
 import com.fincity.saas.entity.processor.dto.CampaignDetails;
 import com.fincity.saas.entity.processor.dto.EntityIntegration;
 import com.fincity.saas.entity.processor.dto.EntityResponse;
@@ -62,6 +63,23 @@ public final class MetaEntityUtil {
     private static final String AD_FIELDS = "id,name,adset,campaign";
     private static final String BASIC_ENTITY_FIELDS = "id,name";
     private static final String FACEBOOK = "facebook";
+
+    // formData payload keys; see Ticket.FORM_DATA_* for the ticket-side mirror.
+    private static final String FD_PROVIDER = "provider";
+    private static final String FD_FORM_ID = "formId";
+    private static final String FD_LEADGEN_ID = "leadGenId";
+    private static final String FD_STANDARD = "standard";
+    private static final String FD_CUSTOM = "custom";
+    private static final String FD_RAW = "raw";
+    private static final String FD_RAW_FIELD_DATA = "fieldData";
+    private static final String FD_RAW_QUESTIONS = "questions";
+    private static final String FACEBOOK_FORM_PROVIDER = "FACEBOOK_FORM";
+
+    // Multi-answer questions are kept as a list in formData, but the typed LeadDetails
+    // fields are all String, so they get a joined value instead.
+    private static final String MULTI_VALUE_SEPARATOR = ", ";
+
+    private static final TypeReference<List<Map<String, Object>>> RAW_LIST_TYPE = new TypeReference<>() {};
 
     // Default body buffer in Spring WebClient is 256 KB which Google Ads insights
     // responses (yearly daily-segmented data) blow past. Bump to 16 MB so large
@@ -191,17 +209,19 @@ public final class MetaEntityUtil {
     public static Mono<EntityResponse> normalizeMetaEntity(
             JsonNode incomingLead,
             JsonNode formDetails,
-            String adId,
-            String leadGenId,
+            ExtractPayload extract,
             String token,
             EntityIntegration integration,
             EntityCollectorMessageResourceService messageService,
             EntityCollectorLogService logService,
             ULong logId) {
 
+        String adId = extract != null ? extract.adId() : null;
+        String leadGenId = extract != null ? extract.leadGenId() : null;
+
         return FlatMapUtil.flatMapMonoWithNull(
                         () -> buildCampaignDetails(adId, token),
-                        campaignDetails -> buildLeadDetails(incomingLead, formDetails),
+                        campaignDetails -> buildLeadDetails(incomingLead, formDetails, extract),
                         (campaignDetails, leadDetails) -> {
                             // Stamp the leadgen id onto adData so Meta Conversions API can pick it up
                             // as user_data.lead_id for system_generated events (Meta CAPI Part 6.3).
@@ -266,7 +286,8 @@ public final class MetaEntityUtil {
                 });
     }
 
-    public static Mono<LeadDetails> buildLeadDetails(JsonNode incomingLead, JsonNode formDetails) {
+    public static Mono<LeadDetails> buildLeadDetails(
+            JsonNode incomingLead, JsonNode formDetails, ExtractPayload extract) {
 
         return FlatMapUtil.flatMapMonoWithNull(
 
@@ -274,7 +295,6 @@ public final class MetaEntityUtil {
 
                 mapper -> {
                     ObjectNode leadNode = JsonNodeFactory.instance.objectNode();
-                    ObjectNode customFieldsNode = JsonNodeFactory.instance.objectNode();
                     Map<String, String> typeMapping = new HashMap<>();
                     Map<String, String> labelMapping = new HashMap<>();
 
@@ -284,35 +304,103 @@ public final class MetaEntityUtil {
                         labelMapping.put(key, question.path(LABEL).asText());
                     }
 
+                    // Normalized views of the submission that get persisted on the ticket.
+                    // `standard` mirrors the typed LeadDetails fields; `custom` holds the custom
+                    // questions plus anything whose question type we could not map.
+                    Map<String, Object> standard = new LinkedHashMap<>();
+                    Map<String, Object> custom = new LinkedHashMap<>();
+
                     for (JsonNode field : incomingLead.path(FIELD_DATA)) {
                         String key = field.path(NAME).asText();
-                        String value = field.path(VALUES).isArray()
-                                        && !field.path(VALUES).isEmpty()
-                                ? field.path(VALUES).get(0).asText()
-                                : "";
+
+                        // Meta returns every answer as an array. Multi-select questions carry more
+                        // than one entry, so keep them all rather than just values[0].
+                        List<String> values = new ArrayList<>();
+                        field.path(VALUES).forEach(value -> values.add(value.asText()));
+
+                        Object answer = switch (values.size()) {
+                            case 0 -> "";
+                            case 1 -> values.getFirst();
+                            default -> List.copyOf(values);
+                        };
+
+                        // The typed LeadDetails fields are all String, so a multi-answer question
+                        // gets a joined value there; the list form survives in formData.
+                        String flatValue = String.join(MULTI_VALUE_SEPARATOR, values);
 
                         String type = typeMapping.get(key);
                         String label = labelMapping.get(key);
 
-                        if (CUSTOM.equalsIgnoreCase(type)) {
-                            customFieldsNode.put(label, value);
-                        } else {
-                            MetaLeadFieldType fieldType = MetaLeadFieldType.fromType(type);
-                            if (fieldType != null) {
-                                leadNode.put(fieldType.getFieldName(), value);
-                            }
+                        MetaLeadFieldType fieldType =
+                                CUSTOM.equalsIgnoreCase(type) ? null : MetaLeadFieldType.fromType(type);
+
+                        if (fieldType != null) {
+                            leadNode.put(fieldType.getFieldName(), flatValue);
+                            standard.put(fieldType.getFieldName(), answer);
+                            continue;
                         }
+
+                        // Three cases land here: CUSTOM questions, question types outside
+                        // MetaLeadFieldType, and answers whose field_data[].name never matched a
+                        // questions[].key (so `type` is null). Only the first used to be kept;
+                        // the other two were discarded with no trace.
+                        String customKey = !StringUtil.safeIsBlank(label) ? label : key;
+                        custom.put(customKey, answer);
+
+                        if (!CUSTOM.equalsIgnoreCase(type))
+                            log.warn(
+                                    "MetaEntityUtil: unmapped Meta question type '{}' for field_data"
+                                            + " key '{}' (formId={}). Captured into formData.custom"
+                                            + " under '{}' instead of being dropped.",
+                                    type,
+                                    key,
+                                    extract != null ? extract.formId() : null,
+                                    customKey);
                     }
 
-                    Map<String, Object> customFields =
-                            mapper.convertValue(customFieldsNode, new TypeReference<Map<String, Object>>() {});
                     LeadDetails lead = mapper.convertValue(leadNode, LeadDetails.class);
-                    lead.setCustomFields(customFields);
+                    lead.setCustomFields(custom);
+                    lead.setFormData(buildFormData(mapper, extract, standard, custom, incomingLead, formDetails));
                     populateStaticFields(lead, FACEBOOK, LeadSource.SOCIAL_MEDIA, LeadSubSource.FACEBOOK);
 
                     return Mono.just(lead);
                 },
                 (mapper, leadDetails) -> Mono.just(leadDetails));
+    }
+
+    /**
+     * Assembles the {@code formData} payload persisted on {@code entity_processor_tickets.FORM_DATA}:
+     * provenance, the two normalized answer maps, and a verbatim Graph API snapshot. The snapshot
+     * means an answer we failed to normalize is still recoverable and a submission can be
+     * re-examined without calling Meta again.
+     */
+    private static Map<String, Object> buildFormData(
+            ObjectMapper mapper,
+            ExtractPayload extract,
+            Map<String, Object> standard,
+            Map<String, Object> custom,
+            JsonNode incomingLead,
+            JsonNode formDetails) {
+
+        Map<String, Object> formData = new LinkedHashMap<>();
+        formData.put(FD_PROVIDER, FACEBOOK_FORM_PROVIDER);
+
+        if (extract != null) {
+            if (!StringUtil.safeIsBlank(extract.formId())) formData.put(FD_FORM_ID, extract.formId());
+            if (!StringUtil.safeIsBlank(extract.leadGenId())) formData.put(FD_LEADGEN_ID, extract.leadGenId());
+        }
+
+        formData.put(FD_STANDARD, standard);
+        formData.put(FD_CUSTOM, custom);
+
+        Map<String, Object> raw = new LinkedHashMap<>();
+        if (incomingLead != null && incomingLead.path(FIELD_DATA).isArray())
+            raw.put(FD_RAW_FIELD_DATA, mapper.convertValue(incomingLead.path(FIELD_DATA), RAW_LIST_TYPE));
+        if (formDetails != null && formDetails.path(META_QUESTION).isArray())
+            raw.put(FD_RAW_QUESTIONS, mapper.convertValue(formDetails.path(META_QUESTION), RAW_LIST_TYPE));
+        if (!raw.isEmpty()) formData.put(FD_RAW, raw);
+
+        return formData;
     }
 
     public static Mono<ResponseEntity<String>> verifyMetaWebhook(String mode, String verifyToken, String challenge, String token) {
